force-app/main/default/objects/Asset/fields/nd_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>nd_Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>