force-app/main/default/objects/Asset/fields/nd_Building_Location__c.field-meta.xml
<CustomField>
    <fullName>nd_Building_Location__c</fullName>
    <label>Building Location (DEPR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>