force-app/main/default/objects/Asset/fields/nd_Building_Location_list__c.field-meta.xml
<CustomField>
    <fullName>nd_Building_Location_list__c</fullName>
    <label>Building Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Building_Locations</valueSetName>
    </valueSet>
</CustomField>