force-app/main/default/objects/Asset/fields/nd_Category__c.field-meta.xml
<CustomField>
    <fullName>nd_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Recognition</fullName>
            </value>
            <value>
                <fullName>Walls of Recognition</fullName>
            </value>
            <value>
                <fullName>Personal Recognition</fullName>
            </value>
            <value>
                <fullName>Stewardship Communication</fullName>
            </value>
            <value>
                <fullName>Stewardship Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>