force-app/main/default/objects/Asset/fields/nd_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Date__c</fullName>
    <inlineHelpText>Date Installed, Sent, or Complete</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>