force-app/main/default/objects/Asset/fields/ND_Extended_Information_Published__c.field-meta.xml
<CustomField>
    <fullName>ND_Extended_Information_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended Information Published</label>
    <type>Checkbox</type>
</CustomField>