force-app/main/default/objects/Asset/fields/nd_Final_Content__c.field-meta.xml
<CustomField>
    <fullName>nd_Final_Content__c</fullName>
    <label>Final Content</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>