force-app/main/default/objects/Asset/fields/ND_Fulfilled_By__c.field-meta.xml
<CustomField>
    <fullName>ND_Fulfilled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfilled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>