force-app/main/default/objects/Asset/fields/nd_Giving_Society__c.field-meta.xml
<CustomField>
    <fullName>nd_Giving_Society__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Giving Society</label>
    <referenceTo>ucinn_ascendv2__Giving_Society__c</referenceTo>
    <relationshipLabel>Membership Benefits</relationshipLabel>
    <relationshipName>Membership_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>