force-app/main/default/objects/Asset/fields/ND_Installed_Name__c.field-meta.xml
<CustomField>
    <fullName>ND_Installed_Name__c</fullName>
    <label>Installed Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>