force-app/main/default/objects/Asset/fields/nd_Latitude_Longitude__c.field-meta.xml
<CustomField>
    <fullName>nd_Latitude_Longitude__c</fullName>
    <label>Latitude/Longitude</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>