force-app/main/default/objects/Asset/fields/ND_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>ND_Location_Description__c</fullName>
    <inlineHelpText>Specific location within the building</inlineHelpText>
    <label>Location Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>