force-app/main/default/objects/Asset/fields/ND_Minimum_Gift_Level__c.field-meta.xml
<CustomField>
    <fullName>ND_Minimum_Gift_Level__c</fullName>
    <label>Minimum Gift Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>