force-app/main/default/objects/Asset/fields/ND_Naming_Item__c.field-meta.xml
<CustomField>
    <fullName>ND_Naming_Item__c</fullName>
    <label>Naming Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Auditorium</fullName>
            </value>
            <value>
                <fullName>Bench</fullName>
            </value>
            <value>
                <fullName>Boardroom</fullName>
            </value>
            <value>
                <fullName>Concert Hall</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Digital Display</fullName>
            </value>
            <value>
                <fullName>Founder&apos;s Wall</fullName>
            </value>
            <value>
                <fullName>Lecture Hall</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Pavilion</fullName>
            </value>
            <value>
                <fullName>Plaza</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Stadium</fullName>
            </value>
            <value>
                <fullName>Study Room</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>