force-app/main/default/objects/Asset/fields/nd_Organization_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_Organization_Donor_ID__c</fullName>
    <formula>Account.ucinn_ascendv2__Donor_ID__c</formula>
    <label>Organization Donor ID</label>
    <type>Text</type>
</CustomField>