force-app/main/default/objects/Asset/fields/nd_Primary_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>nd_Primary_Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Solicitor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>