force-app/main/default/objects/Asset/fields/nd_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>