force-app/main/default/objects/Asset/fields/nd_Product_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Product_Name_Formula__c</fullName>
    <formula>Product2.Name</formula>
    <label>Product Name Formula</label>
    <type>Text</type>
</CustomField>