force-app/main/default/objects/Asset/fields/nd_Recognition_Level__c.field-meta.xml
<CustomField>
    <fullName>nd_Recognition_Level__c</fullName>
    <label>Recognition Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leadership (100k)</fullName>
            </value>
            <value>
                <fullName>Prize (250k)</fullName>
            </value>
            <value>
                <fullName>Distinguished (500k)</fullName>
            </value>
            <value>
                <fullName>Presidential (1M)</fullName>
            </value>
            <value>
                <fullName>Principal (5M)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>