force-app/main/default/objects/Asset/fields/nd_Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_Record_Type_Dev_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Dev Name</label>
    <type>Text</type>
</CustomField>