force-app/main/default/objects/Asset/fields/ND_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Sent_Date__c</fullName>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>