force-app/main/default/objects/Asset/fields/nd_Size_of_Recognition_Piece__c.field-meta.xml
<CustomField>
    <fullName>nd_Size_of_Recognition_Piece__c</fullName>
    <label>Size of Recognition Piece</label>
    <length>255</length>
    <type>Text</type>
</CustomField>