force-app/main/default/objects/Asset/fields/nd_Source__c.field-meta.xml
<CustomField>
    <fullName>nd_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steward Asset Ruli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>