force-app/main/default/objects/Asset/fields/nd_Stewardship_Assignment__c.field-meta.xml
<CustomField>
    <fullName>nd_Stewardship_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stewardship Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>