force-app/main/default/objects/Asset/fields/nd_Stewardship_Item__c.field-meta.xml
<CustomField>
    <fullName>nd_Stewardship_Item__c</fullName>
    <label>Stewardship Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artwork</fullName>
            </value>
            <value>
                <fullName>Bench Plaque</fullName>
            </value>
            <value>
                <fullName>Boulder</fullName>
            </value>
            <value>
                <fullName>Bronze Plaque</fullName>
            </value>
            <value>
                <fullName>Building Lettering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portrait</fullName>
            </value>
            <value>
                <fullName>Room Sign</fullName>
            </value>
            <value>
                <fullName>Special Recognition Display</fullName>
            </value>
            <value>
                <fullName>Tree Plaque</fullName>
            </value>
            <value>
                <fullName>Digital Display</fullName>
            </value>
            <value>
                <fullName>Endowed Chair Wall</fullName>
            </value>
            <value>
                <fullName>Endowments for Excellence</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Founders&apos; Wall</fullName>
            </value>
            <value>
                <fullName>Library Endowments</fullName>
            </value>
            <value>
                <fullName>Blessed Rosary</fullName>
            </value>
            <value>
                <fullName>Campaign Gift</fullName>
            </value>
            <value>
                <fullName>Chair Medallion</fullName>
            </value>
            <value>
                <fullName>Cumulative Program ($100k)</fullName>
            </value>
            <value>
                <fullName>Cumulative Program ($250k)</fullName>
            </value>
            <value>
                <fullName>Cumulative Program ($500k)</fullName>
            </value>
            <value>
                <fullName>Cumulative Program ($1M)</fullName>
            </value>
            <value>
                <fullName>Cumulative Program ($5M)</fullName>
            </value>
            <value>
                <fullName>Discontinued Gift</fullName>
            </value>
            <value>
                <fullName>Event Gift</fullName>
            </value>
            <value>
                <fullName>Other Gift</fullName>
            </value>
            <value>
                <fullName>Commencement Stole</fullName>
            </value>
            <value>
                <fullName>Badin Guild Medallion</fullName>
            </value>
            <value>
                <fullName>Photobook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>