force-app/main/default/objects/Asset/fields/ND_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>ND_Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>