force-app/main/default/objects/Asset/fields/nd_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>nd_URL_Link__c</fullName>
    <label>URL Link</label>
    <type>Url</type>
</CustomField>