force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Is_Referential__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Referential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the asset is not a purchased asset, but rather an asset tied to an opportunity pledge shell, recurring gift shell, or partial payment shell as referential data, so that we can generate purchased assets upon payment.</description>
    <inlineHelpText>Denotes that the asset is not a purchased asset, but rather an asset tied to an opportunity pledge shell, recurring gift shell, or partial payment shell as referential data, so that we can generate purchased assets upon payment.</inlineHelpText>
    <label>Is Referential</label>
    <type>Checkbox</type>
</CustomField>