force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Location__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Location__c</fullName>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>