force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Naming_Details__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Naming_Details__c</fullName>
    <label>Naming Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>