force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>