force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>