force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Price__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Price__c</fullName>
    <formula>Price</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>