force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Recipient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>