force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Review_Transaction_v2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Transaction_v2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Review Transaction v2 that created this asset.</description>
    <inlineHelpText>The Review Transaction v2 that created this asset.</inlineHelpText>
    <label>Review Transaction (v2)</label>
    <referenceTo>ucinn_ascendv2__Review_Transaction_v2__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets_Review_Transaction_v2</relationshipName>
    <type>Lookup</type>
</CustomField>