force-app/main/default/objects/Asset/fields/ucinn_ascendv2__Session__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>ucinn_ascendv2__Session__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets_Session</relationshipName>
    <type>Lookup</type>
</CustomField>