force-app/main/default/objects/Asset/recordTypes/Giving_Society_Acknowledgements.recordType-meta.xml
<RecordType>
    <fullName>Giving_Society_Acknowledgements</fullName>
    <active>true</active>
    <label>Giving Society Acknowledgements</label>
</RecordType>