force-app/main/default/objects/Asset/recordTypes/Membership_Benefit.recordType-meta.xml
<RecordType>
    <fullName>Membership_Benefit</fullName>
    <active>true</active>
    <label>Membership Benefit</label>
</RecordType>