force-app/main/default/objects/Asset/recordTypes/Tokens.recordType-meta.xml
<RecordType>
    <fullName>Tokens</fullName>
    <active>true</active>
    <label>Tokens</label>
</RecordType>