force-app/main/default/objects/Asset/validationRules/Final_Content.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Content</fullName>
    <active>false</active>
    <description>When the Category is Stewardship Communication, Final Content is required</description>
    <errorConditionFormula>TEXT(nd_Category__c) = &quot;Stewardship Communication&quot; &amp;&amp;
LEN(nd_Final_Content__c) == 0</errorConditionFormula>
    <errorMessage>When the Category is Stewardship Communication, Final Content is required</errorMessage>
</ValidationRule>