force-app/main/default/objects/Asset/validationRules/Location_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Description</fullName>
    <active>false</active>
    <description>When the Category is Public Recognition or Walls of Recognition, Location Description is required</description>
    <errorConditionFormula>OR(TEXT(nd_Category__c) = &quot;Public Recognition&quot;, 
		TEXT(nd_Category__c) = &quot;Walls of Recognition&quot;) &amp;&amp;
 ISBLANK(ND_Location_Description__c)</errorConditionFormula>
    <errorMessage>When the Category is Public Recognition or Walls of Recognition, Location Description is required</errorMessage>
</ValidationRule>