force-app/main/default/objects/Asset/validationRules/Purchase_Date_Fulfilled.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Date_Fulfilled</fullName>
    <active>true</active>
    <description>Purchase Date is required when Status = Fulfilled</description>
    <errorConditionFormula>ISBLANK( PurchaseDate ) &amp;&amp; TEXT( Status ) = &quot;Fulfilled&quot;</errorConditionFormula>
    <errorMessage>Purchase Date is required when Status = Fulfilled</errorMessage>
</ValidationRule>