force-app/main/default/objects/Asset/listViews/Stewardship_Items.listView-meta.xml
<ListView>
    <fullName>Stewardship_Items</fullName>
    <columns>ASSET.NAME</columns>
    <columns>nd_Date__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Stewardship_Item</value>
    </filters>
    <label>Stewardship Items</label>
</ListView>